# Vauban

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md
config/: default.toml  development.toml  production.toml  testing.toml
docs/: functional_specifications.md
docs/logos/: Vauban.afpub
docs/specs/: Multi-Factor Authentication (MFA).docx  Role-Based Access Control (RBAC).docx
docs/technical/: Vauban_Architecture_Diagram.mermaid  Vauban_Architecture_Technical_EN(1.1).docx  Vauban_Privsep_Architecture_EN(1.0).md  Vauban_Privsep_Architecture_EN(1.1).md  Vauban_Privsep_Architecture_EN(1.2).md  (+2 more)
shared/: Cargo.toml
shared/src/: capsicum.rs  ipc.rs  lib.rs  messages.rs
vauban-audit/: Cargo.toml
vauban-auth/: Cargo.toml
vauban-auth/src/: main.rs
vauban-proxy-rdp/: Cargo.toml
vauban-proxy-rdp/src/: error.rs  ipc.rs  main.rs  session.rs  session_manager.rs  video_encoder.rs
vauban-proxy-ssh/: Cargo.toml
vauban-proxy-ssh/src/: error.rs  ipc.rs  main.rs  session.rs  session_manager.rs
vauban-rbac/: Cargo.toml
vauban-supervisor/: Cargo.toml
vauban-supervisor/config/: development.toml  production.toml
vauban-supervisor/src/: config.rs  main.rs
vauban-vault/: Cargo.toml  README.md
vauban-vault/src/: crypto.rs  keyring.rs  lib.rs  main.rs  transit.rs
vauban-web/: Cargo.toml  ENV_EXAMPLE.md  ENV_TEST.md  README.md  askama.toml  clippy.toml  diesel.toml
vauban-web/certs/: dev-server.crt
vauban-web/config/: default.toml  development.toml  production.toml  testing.toml
vauban-web/migrations/2025-01-27-000000_initial_schema/: up.sql
vauban-web/migrations/20260102000000_initial_schema/: down.sql
vauban-web/migrations/20260110000000_auth_sessions_and_api_keys/: down.sql  up.sql
vauban-web/scripts/: generate-dev-certs.sh  setup_test_db.sh
vauban-web/src/: cache.rs  config.rs  crypto.rs  db.rs  error.rs  lib.rs  main.rs  schema.rs  static_assets.rs  test_utils.rs  utils.rs
vauban-web/src/grpc/: clients.rs  mod.rs
vauban-web/src/handlers/: accounts.rs  api.rs  assets.rs  auth.rs  mod.rs  sessions.rs  web.rs  websocket.rs
vauban-web/src/handlers/api/: accounts.rs  assets.rs  groups.rs  mod.rs  sessions.rs
vauban-web/src/handlers/web/: asset_groups.rs  assets.rs  dashboard.rs  groups.rs  mod.rs  rdp.rs  sessions.rs  ssh.rs  tests.rs  users.rs
vauban-web/src/ipc/: clients.rs  mod.rs  proxy_rdp.rs  proxy_ssh.rs  supervisor.rs  vault.rs
vauban-web/src/middleware/: audit.rs  auth.rs  client_addr.rs  csrf.rs  flash.rs  mod.rs  security.rs
vauban-web/src/models/: api_key.rs  asset.rs  auth_session.rs  mod.rs  session.rs  user.rs
vauban-web/src/services/: auth.rs  broadcast.rs  connections.rs  mod.rs  rate_limit.rs  rbac.rs  vault.rs
vauban-web/src/tasks/: cleanup.rs  dashboard.rs  mod.rs
vauban-web/src/templates/: base.rs  mod.rs
vauban-web/src/templates/accounts/: apikey_create_form.rs  apikey_created.rs  apikey_list.rs  group_add_member.rs  group_create.rs  group_detail.rs  group_edit.rs  group_list.rs  login.rs  mfa_setup.rs  mfa_verify.rs  mod.rs  profile.rs  session_list.rs  user_create.rs  user_detail.rs  user_edit.rs  user_list.rs
vauban-web/src/templates/assets/: access_list.rs  asset_connect.rs  asset_create.rs  asset_detail.rs  asset_edit.rs  asset_list.rs  group_add_asset.rs  group_create.rs  group_detail.rs  group_edit.rs  group_list.rs  mod.rs
vauban-web/src/templates/dashboard/: admin.rs  home.rs  mod.rs
vauban-web/src/templates/dashboard/widgets/: active_sessions.rs  assets_status.rs  mod.rs  recent_activity.rs  stats.rs
vauban-web/src/templates/partials/: header.rs  mod.rs  sidebar.rs  sidebar_content.rs
vauban-web/src/templates/sessions/: active_list.rs  approval_detail.rs  approval_list.rs  mod.rs  recording_detail.rs  recording_list.rs  recording_play.rs  session_detail.rs  session_list.rs  terminal.rs
vauban-web/static/css/: terminal.css  vauban.css
vauban-web/static/js/: tailwind-config.js  vauban-components.js
vauban-web/templates/: base.html
vauban-web/templates/accounts/: apikey_create_form.html  apikey_created.html  apikey_list.html  group_add_member.html  group_create.html  group_detail.html  group_edit.html  group_list.html  login.html  mfa_setup.html  mfa_verify.html  profile.html  session_list.html  session_list_partial.html  user_create.html  user_detail.html  user_edit.html  user_list.html
vauban-web/templates/assets/: _ssh_host_key_fragment.html  _ssh_host_key_mismatch_fragment.html  _ssh_host_key_no_key_fragment.html  _ssh_host_key_stored_mismatch_fragment.html  access_list.html  asset_connect.html  asset_create.html  asset_detail.html  asset_edit.html  asset_list.html  group_add_asset.html  group_create.html  group_detail.html  group_edit.html  group_list.html
vauban-web/templates/dashboard/: admin.html  home.html
vauban-web/templates/dashboard/widgets/: active_sessions.html  assets_status.html  recent_activity.html  stats.html
vauban-web/templates/partials/: header.html  sidebar.html  sidebar_content.html
vauban-web/templates/sessions/: active_list.html  active_list_content.html  active_list_stats.html  approval_detail.html  approval_list.html  rdp.html  recording_detail.html  recording_list.html  recording_play.html  session_detail.html  session_list.html  terminal.html
vauban-web/tests/: integration_tests.rs  mod.rs
vauban-web/tests/api/: account_pages_test.rs  accounts_test.rs  asset_groups_test.rs  assets_test.rs  auth_test.rs  cleanup_test.rs  dashboard_pages_test.rs  middleware_test.rs  mod.rs  sessions_test.rs  vauban_groups_test.rs  web_pages_test.rs  websocket_test.rs
vauban-web/tests/common/: mod.rs
vauban-web/tests/fixtures/: mod.rs
vauban-web/tests/middleware/: middleware_test.rs  mod.rs
vauban-web/tests/security/: auth_test.rs  mod.rs  security_test.rs
vauban-web/tests/web/: account_pages_test.rs  asset_pages_test.rs  dashboard_pages_test.rs  mfa_test.rs  mod.rs  pages_test.rs  routing_test.rs  session_pages_test.rs  sidebar_menu_test.rs
vauban-web/tests/ws/: broadcast_test.rs  connections_test.rs  endpoints_test.rs  mod.rs  websocket_test.rs
(+4 files in other folders)
