[workspace]
resolver = "2"
members = [
    "shared",
    "vauban-supervisor",
    "vauban-web",
    "vauban-auth",
    "vauban-rbac",
    "vauban-proxy-ssh",
    "vauban-proxy-rdp",
    "vauban-vault",
    "vauban-audit",
]

# Default package for `cargo run` from workspace root
# vauban-supervisor is the main entry point that orchestrates all services
default-members = ["vauban-supervisor"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
authors = ["Richard Ben Aleya"]
license = "BSD-2-Clause"

[workspace.dependencies]
# Shared dependencies (minimalist, no async runtime)
shared = { path = "shared" }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
anyhow = "1.0"
libc = "0.2"

# POSIX wrappers (safe alternatives to libc)
nix = { version = "0.31", features = ["process", "signal", "poll", "fs", "user", "socket", "uio", "term"] }

# Configuration loading
config = { version = "0.15", default-features = false, features = ["toml"] }

# Tokio is used ONLY by vauban-web (not shared)

[profile.release]
opt-level = 3
lto = true
debug = false
strip = true

[profile.release.package."*"]
opt-level = 3
