[workspace]
resolver = "2"
members = [
    "shared",
    "vauban-supervisor",
    "vauban-web",
    "vauban-auth",
    "vauban-rbac",
    "vauban-proxy-ssh",
    "vauban-proxy-rdp",
    "vauban-vault",
    "vauban-audit",
]

# Default package for `cargo run` from workspace root
# vauban-supervisor is the main entry point that orchestrates all services
default-members = ["vauban-supervisor"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
authors = ["Richard Ben Aleya"]
license = "BSD-2-Clause"

[workspace.dependencies]
# Shared dependencies (minimalist, no async runtime)
shared = { path = "shared" }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
anyhow = "1.0"
libc = "0.2"

# POSIX wrappers (safe alternatives to libc)
nix = { version = "0.31", features = ["process", "signal", "poll", "fs", "user", "socket", "uio", "term"] }

# Configuration loading
config = { version = "0.15", default-features = false, features = ["toml"] }

# Async runtime - used by vauban-web and proxy services (vauban-proxy-ssh, vauban-proxy-rdp)
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }

# SSH client (async, pure Rust) - used by vauban-proxy-ssh
# Note: russh 0.57+ includes keys module directly (no separate russh-keys crate)
russh = "0.57"
async-trait = "0.1"

# Secret management and memory zeroization (H-10)
secrecy = { version = "0.10", features = ["serde"] }
zeroize = { version = "1.8", features = ["derive"] }

# Cryptography for vauban-vault (M-1, C-2)
aes-gcm = "0.10"
hkdf = "0.12"
sha3 = "0.10"
base64 = "0.22"
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
opt-level = 3
lto = true
debug = false
strip = true

[profile.release.package."*"]
opt-level = 3
