[package]
name = "shared"
description = "Vauban - Shared IPC protocol, messages, and Capsicum sandboxing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
libc.workspace = true
nix.workspace = true
tracing.workspace = true
zeroize.workspace = true

# Binary serialization for IPC
bincode = { version = "2.0", features = ["serde"] }

# Capsicum bindings for FreeBSD
[target.'cfg(target_os = "freebsd")'.dependencies]
capsicum = "0.4"

[dev-dependencies]
tempfile = "3"
