[package]
name = "vauban-auth"
description = "Vauban - Authentication service (MFA, SSO, LDAP)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
shared.workspace = true
libc.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
