[package]
name = "vauban-supervisor"
description = "Vauban - Process supervisor with privilege separation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
shared.workspace = true
libc.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true

# Configuration
config.workspace = true
toml = "0.9"

# Signal handling
signal-hook = "0.4"
