[package]
name = "vauban-vault"
description = "Vauban - Cryptographic secrets management service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
name = "vauban_vault"
path = "src/lib.rs"

[[bin]]
name = "vauban-vault"
path = "src/main.rs"

[dependencies]
shared.workspace = true
libc.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true

# Cryptography
aes-gcm.workspace = true
hkdf.workspace = true
sha3.workspace = true
base64.workspace = true
zeroize.workspace = true

# TOTP / MFA
totp-rs.workspace = true
