[package]
name = "vauban-web"
version = "0.1.0"
edition = "2021"
authors = ["Richard Ben Aleya"]
description = "VAUBAN - Security Bastion - Web Interface and API (Rust)"
license = "MIT"
readme = "README.md"
default-run = "vauban-web"

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "timeout", "trace", "compression-gzip", "compression-br"] }

# Database
diesel = { version = "2.3", features = ["postgres", "uuid", "chrono", "r2d2", "serde_json", "network-address"] }
diesel-async = { version = "0.7", features = ["postgres", "deadpool"] }

# Templates
askama = { version = "0.15", features = ["serde_json"] }

# Authentication
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
argon2 = "0.5"
totp-rs = { version = "5.6", features = ["qr", "gen_secret"] }
secrecy = "0.10"
zeroize = { version = "1.8", features = ["derive"] }

# OAuth2 / OpenID Connect
oauth2 = "4"
openidconnect = "3"

# Sessions
tower-sessions = "0.14"

# Validation
validator = { version = "0.20", features = ["derive"] }

# gRPC
tonic = "0.14"
tonic-tls = "0.6"
prost = "0.14"

# Cryptography (Post-Quantum)
pqcrypto-kyber = "0.8"
pqcrypto-dilithium = "0.5"
x25519-dalek = "2.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
aes-gcm = "0.10"
sha1 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
hkdf = "0.12"
subtle = "2.5"

# Cache
redis = { version = "1.0", features = ["tokio-comp"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
bcrypt = "0.17"
rand = "0.8"
hex = "0.4"
url = "2.5"
base32 = "0.5"
libc = "0.2"

# Configuration
config = "0.15"
dotenv = "0.15"
rpassword = "7"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# WebSocket & Cookies
axum-extra = { version = "0.12", features = ["cookie", "typed-header"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.14"

[[bin]]
name = "seed_data"
path = "src/bin/seed_data.rs"

[[bin]]
name = "reset_password"
path = "src/bin/reset_password.rs"

[[bin]]
name = "create_superuser"
path = "src/bin/create_superuser.rs"

[profile.release]
opt-level = 3
lto = true
debug = false
strip = true

[profile.release.package."*"]
opt-level = 3
