[package]
name = "vauban-web"
description = "VAUBAN - Security Bastion - Web Interface and API (Rust)"
readme = "README.md"
default-run = "vauban-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Shared IPC library
shared.workspace = true

# Web framework
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "timeout", "trace", "compression-gzip", "compression-br"] }

# Database
diesel = { version = "2.3", features = ["postgres", "uuid", "chrono", "serde_json", "network-address"] }
diesel-async = { version = "0.7", features = ["postgres", "deadpool"] }

# Templates
askama = { version = "0.15", features = ["serde_json"] }

# Authentication
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
argon2 = "0.5"
totp-rs = { version = "5.6", features = ["qr", "gen_secret"] }
secrecy = { version = "0.10", features = ["serde"] }
zeroize = { version = "1.8", features = ["derive"] }

# OAuth2 / OpenID Connect
oauth2 = "5"
openidconnect = "4"

# Sessions
tower-sessions = "0.14"

# Validation
validator = { version = "0.20", features = ["derive"] }

# Cryptography (Post-Quantum)
pqcrypto-mlkem = "0.1"
pqcrypto-mldsa = "0.1"
pqcrypto-traits = "0.3"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
aes-gcm = "0.10"
sha1 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
hkdf = "0.12"
subtle = "2.5"

# Cache
redis = { version = "1.0", features = ["tokio-comp"] }

# Logging
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Serialization
serde.workspace = true
serde_json = "1.0"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
ipnetwork = "0.21"
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
bcrypt = "0.18"
rand = "0.8"
hex = "0.4"
url = "2.5"
base32 = "0.5"
base64 = "0.22"
libc.workspace = true

# Security
dashmap = "6"       # Concurrent HashMap for in-memory rate limiting
ammonia = "4"       # HTML sanitization
regex = "1"         # Regular expressions for input validation

# Configuration
config = "0.15"
dotenvy = "0.15"
rpassword = "7"

# HTTP client
reqwest = { version = "0.13", features = ["json", "rustls"] }

# WebSocket & Cookies
axum-extra = { version = "0.12", features = ["cookie", "typed-header"] }
futures-util = "0.3"

# TLS (HTTPS only, TLS 1.3)
axum-server = { version = "0.8", features = ["tls-rustls"] }
rustls = "0.23"
rustls-pki-types = "1"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.14"
axum-test = "18"
diesel_migrations = "2.2"
tempfile = "3"
serial_test = "3"
once_cell = "1.19"
insta = { version = "1.40", features = ["yaml"] }
tokio-tungstenite = "0.28"

[[bin]]
name = "seed_data"
path = "src/bin/seed_data.rs"

[[bin]]
name = "reset_password"
path = "src/bin/reset_password.rs"

[[bin]]
name = "create_superuser"
path = "src/bin/create_superuser.rs"

[[bin]]
name = "reset_2FA"
path = "src/bin/reset_2FA.rs"
